landing page and success

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-server": "20.3.2",
     "@angular/router": "20.3.2",
     "@angular/ssr": "^20.3.3",
+    "canvas-confetti": "^1.9.4",
     "express": "^5.1.0",
     "ngx-cookie-service": "^20.1.0",
     "ngx-owl-carousel-o": "^20.0.1",
@@ -40,6 +41,7 @@
     "@angular/build": "20.3.3",
     "@angular/cli": "20.3.4",
     "@angular/compiler-cli": "20.3.2",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
