--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "ngx-cookie-service": "^20.1.0",
     "ngx-owl-carousel-o": "^20.0.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "video.js": "^8.23.6"
   },
   "devDependencies": {
     "@angular/build": "20.3.3",
